--- a/icfes/templates/exam_start.html
+++ b/icfes/templates/exam_start.html
@@ -7,6 +7,7 @@
         {% csrf_token %}
         <label for="student_name">Nombre del estudiante:</label>
         <input type="text" name="student_name" id="student_name" required>
+        <input type="hidden" name="category" value="{{ category }}">
         <br><br>
         <button type="submit">Iniciar examen</button>
     </form>
